# elf-dep-parser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
example/: lib_usage.py
src/elf_dep_parser/: elf_dep_parser.py  parser.py
src/elf_dep_parser/cli/: cli.py
tests/: test_arch_detect.py  test_cli.py  test_elfs.py  test_ld.py  test_lib_path.py
